# rag

./: README.md  pyproject.toml
0-DataIngestion/: 1-DataIngestion.ipynb
1-VectorEmbeddings/: embeddings.ipynb  openaiembeddings.ipynb
2-VectorStores/: 1-chromadb.ipynb
2-VectorStores/chroma_db/: chroma.sqlite3
